@@ -539,22 +539,15 @@ char * dm_strnesc(const char * from, size_t len)
 }
 	
 /* 
- *
- * replace tabs with spaces and all multi-spaces with single spaces 
- *
+ * replace all multi-spaces with single spaces 
  */
-
-void  dm_pack_spaces(char *in) 
+static void pack_char(char *in, char c)
 {
-	char *tmp, *saved;
-	/* replace tabs with spaces */
-	g_strdelimit(in,"\t",' ');
-	
-	/* replace all multi-spaces with single spaces */
-	tmp = g_strdup(in);
+	char *saved;
+	char *tmp = g_strdup(in);
 	saved = tmp;
 	while(*tmp) {
-		if ((*tmp == ' ') && (*(tmp+1) == ' ')) {
+		if ((*tmp == c) && (*(tmp+1) == c)) {
 			tmp++;
 		} else {
 			*in++=*tmp++;
@@ -562,6 +555,19 @@ void  dm_pack_spaces(char *in)
 	}
 	g_free(saved);
 	*in='\0';
+}
+
+/* 
+ *
+ * replace tabs with spaces and all multi-spaces with single spaces 
+ *
+ */
+
+void  dm_pack_spaces(char *in) 
+{
+	/* replace tabs with spaces */
+	g_strdelimit(in,"\t",' ');
+	pack_char(in,' ');
 }
 /* 
  * base-subject
@@ -2238,7 +2244,7 @@ char * dbmail_iconv_decode_text(const char *in)
 		if ((c == '=') && (n == '?') && (inword == FALSE) && (inchar == FALSE)) {
 			inchar = TRUE;
 			l = i;
-		} else if (((p2 == 'q') || (p2 == 'Q')) && (p == '?') && inchar) {
+		} else if (((p2 == 'q') || (p2 == 'Q') || (p2 == 'b') || (p2 == 'B')) && (p == '?') && inchar) {
 			inchar = FALSE;
 			inword = TRUE;
 			wlen = 0;
@@ -2313,6 +2319,11 @@ char * dbmail_iconv_decode_address(char *address)
 	// now we're set to decode the rfc2047 address header
 	// into clean utf8
 	r = dbmail_iconv_decode_text(s); g_free(s);
+
+	// oops: if the rfc2047 encoded address names contain
+	// encoded double-quotes, imap_cleanup_address has added quotes that are now
+	// redundant. we need to strip those
+	pack_char(r,'"');
 
 	return r;
 }
